# sdr-bench

./: README.md  pyproject.toml
configs/: models.yaml
docs/: agent-sandbox-todos.md  full-cycle-enterprise-sdr.md  rationale-codes.md  sdr-benchmark-v0.md
examples/: sample_episode.json  sample_hidden_labels.json  sample_policy_labels.json  sample_policy_submission.json  sample_robustness_submission.json  sample_robustness_suite.json  sample_seller_profile.json  sample_submission.json  sample_window.json
schemas/: account_snapshot.schema.json  capacity_budget.schema.json  contact_snapshot.schema.json  document_evidence.schema.json  evaluation_window.schema.json  hidden_labels.schema.json  model_output.schema.json  policy_episode.schema.json  policy_episode_labels.schema.json  policy_submission.schema.json  rationale_codes.schema.json  robustness_submission.schema.json  robustness_suite.schema.json  trigger_event.schema.json
src/sdr_bench/: __init__.py  baselines.py  evaluator.py  io_utils.py  rationale_codes.py  stages.py
src/sdr_bench/agent/: __init__.py  public_views.py  runner.py  sandbox.py  seller_knowledge.py  trace.py  types.py
src/sdr_bench/harness/: __init__.py  aggregate.py  sweep.py
src/sdr_bench/runner/: __init__.py  episode_runner.py  prompts.py  repair.py  run.py
tests/: test_agent_adapter_tool_turns.py  test_agent_policy_runner.py  test_agent_runner.py  test_agent_sandbox.py  test_evaluator.py  test_harness.py  test_policy_env.py  test_rationale_codes.py  test_runner.py  test_seller_knowledge.py  test_simulator.py  test_stages.py
(+15 files in other folders)
