[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sdr-bench"
version = "0.1.0"
description = "Artifacts for an SDR allocation benchmark."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "jsonschema>=4.10,<5",
  "pydantic>=2,<3",
  "openai>=1.30,<2",
  "anthropic>=0.34,<1",
  "numpy>=1.26,<3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
